# Zilch-monorepo

./: Cargo.toml  README.md  newconfig.yml  package-lock.json  package.json
client/: data.js
examples/: Readme.md
examples/Alice/: compiled_inputs.json
examples/Scripts/: inputs.py  outputs.py
fibproof/: fib8_program.masm  onchain_fib_trace.proof  onchain_fib_trace2.outputs  onchain_fib_trace2.proof
solana-custom/cli/: Cargo.toml
solana-custom/cli-config/: Cargo.toml
src/: main.rs
