[package]
name = "Zilch-monorepo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
miden = "0.3.0"
miden-assembly = "0.3.0"
miden-processor = "0.3.0"
miden-prover = "0.3.0"
serde =  { version = "1.0", features = ["derive"] }
winterfell = "0.4.2"
